--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,25 @@
                                                     <input type="text" name="contact-name" id="contact-name" value="" required>
                                                 </div>
                                             </li>
+
+                                            <li class="wow fadeInUp" data-wow-delay="1.6s">
+                                                <label for="contact-email">Email : </label>
+                                                <div class="textarea">
+                                                    <input type="email" name="contact-email" id="contact-email" value="" required>
+                                                </div>
+                                            </li>
+
+                                            <li class="wow fadeInUp" data-wow-delay="1.6s">
+                                                <label for="contact-project">Message : </label>
+                                                <div class="textarea">
+                                                    <textarea type="email" name="contact-project" id="contact-project" rows="6" value="" required></textarea>
+                                                </div>
+                                            </li>
+
+
                                         </ul>
+
+                                        <button type="submit" name="contact-submit" id="contact-submit" class="send wow fadeInUp" data-wow-delay="1.8s">Send message</button>
 
                                     </form>
                                 </div>
@@ -88,6 +106,65 @@
                         </div>
 
                         <!-- form section ends here -->
+
+                         <!---------- footer starts here ----------->
+
+  <div class="footer">
+    <div class="container">
+        <br><br>
+
+        <div class="collab">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="wow fadeInUp" data-wow-delay="0.4s"> I can help with projects.</p>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="hr">
+            <div class="row"></div>
+        </div>
+
+        <!-- <br><br> -->
+
+        <div class="info">
+            <div class="row">
+                <div class="col-lg-4" id="personal">
+                    <div class="cnct">
+                    <p class="wow fadeInUp">connect with me</p>
+                    <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @ersan.bt</h4>
+                </div>
+                    <!-- <br><br> -->
+                </div>
+
+                <div class="col-lg-4" id="personal">
+                    <div class="pers">
+                        <p class="wow fadeInUp" data-wow-delay="0">follow me</p>
+                        <ul>
+                            <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
+                            <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
+                            <li id="ld" class="wow fadeInUp" data-wow-delay="0.8s">lnkdin</li>
+                        </ul>
+                    </div>
+
+                        <!-- <br><br> -->
+                    </div>
+
+                <div class="col-lg-4" id="personal">
+                    <div class="say">
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">say hello</p>
+                        <h4 class="wow fadeInUp" data-wow-delay="0.4s">ersan.ebit@gmail.com</h4>
+                    </div>
+                        
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+                <!-- footer ends here -->
 
      <!-- greensock cdn -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
