made it responsive

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <!-- navbar ends here -->
 
                     <!-- hero image starts here -->
-                    <div class="container">
+                    <div class="container profile-img">
                         <div class="row">
                             <div class="col-lg-12 about image wow fadeInUp"></div>
                         </div>
@@ -69,7 +69,7 @@
                             <br><br>
                             
 
-                            <div class="row two">
+                            <div class="row one two about-text">
                                 <div class="col-lg-12">
                                     <h2 class="wow fadeInUp">About me</h2>
                                     <p class="wow fadeInUp">I am a Software Development student completing my fourth year of education. 
